# pix

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  rustfmt.toml
benches/: ch16.rs  ch8.rs  cu16.rs  cu8.rs  mask_over.rs  over.rs  rgba_to_rgb.rs  src_over.rs
examples/: checker.rs  colors.rs
examples/bmp/: mod.rs
src/: alpha.rs  alpha8.rs  bgr.rs  blend.rs  chan.rs  channel.rs  cmy.rs  el.rs  format.rs  gamma.rs  gray.rs  gray8.rs  hsl.rs  hsv.rs  hsx.rs  hue.rs  hwb.rs  lib.rs  mask.rs  matte.rs  model.rs  oklab.rs  ops.rs  palette.rs  pixel.rs  private.rs  raster.rs  rgb.rs  rgb8.rs  rgba.rs  rgba8.rs  srgb.rs  srgb_gamma.rs  xyz.rs  ycc.rs
src/clr/: bgr.rs  gray.rs  hsl.rs  hsv.rs  hwb.rs  mask.rs  matte.rs  mod.rs  model.rs  rgb.rs  ycc.rs
